# higienizador-transcricoes

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALACAO.md  LICENSE  PUBLICAR_GITHUB.md  README.md  build.py  com.foxbit.higienizador.yml  higienizador-transcricoes.in  meson.build
